# db-pro

./: .gitignore  README.md  index.html  package-lock.json  package.json
.agents/roles/: architect.md  implementer.md  releaser.md  resolver.md  reviewer.md
.agents/rules/: branching_rules.md  coding_rules.md  merge_rules.md  runtime.md
.agents/templates/: bugfix_prompt.md  feature_prompt.md  release_prompt.md  review_prompt.md
.agents/workflows/: bugfix.md  dbpro-mvp-p0.md  dbpro-mvp-p1.md  dbpro-mvp-s1.md  dbpro-mvp-s2.md  dbpro-mvp-s3.md  feature.md  release.md  review.md  starter.md
docs/: mvp-dbeaver-gap-report.md  mvp-gap-report-current.md  mvp-sprint-backlog.md  p0-implementation-plan.md  p1-implementation-progress.md
docs/architecture/: BOUNDARIES.md
docs/sprint-1/: README.md  pg-realworld-test-matrix.md  s1-03-diagnostics-normalization.md  s1-04-wrapped-pushdown-behavior.md  s1-05-error-taxonomy.md  s1-local-status.md
docs/sprint-2/: README.md  s2-01-connection-controller-extraction.md  s2-02-query-controller-extraction.md  s2-03-navigator-controller-extraction.md  s2-04-result-grid-controller-extraction.md  (+2 more)
scripts/: import_github_issues.sh  import_github_issues_from_csv.py  pg_matrix_run.sh
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs  sample.rs  secrets.rs  state.rs  storage.rs
src-tauri/src/commands/: connection.rs  mod.rs  navigator.rs  shared.rs
src-tauri/src/commands/query/: cancellation.rs  execution.rs  integration_tests.rs  mod.rs
(+73 files in other folders)
