[package]
name = "db-pro"
version = "0.1.0"
description = "DB Pro desktop SQL client"
authors = ["db-pro team"]
edition = "2021"

[lib]
name = "db_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures-util = "0.3"
keyring = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "any", "sqlite", "postgres", "mysql", "json"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["macros", "sync", "time"] }
url = "2"
uuid = { version = "1", features = ["v4", "fast-rng"] }
